--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -50,7 +50,7 @@
 
                 <div class="text-center">
                     <p class="mb-0 text-muted">Not an administrator?</p>
-                    <a href="{{ url_for('login') }}" class="text-decoration-none">
+                    <a href="{{ url_for('auth.login') }}" class="text-decoration-none">
                         <i class="bi bi-arrow-left"></i> Return to User Login
                     </a>
                 </div>
