--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="{{ url_for('dashboard.index') }}">
                 <i class="bi bi-cloud-haze"></i> Smart City Monitor
             </a>
             
@@ -35,22 +35,27 @@
                 <ul class="navbar-nav ms-auto">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="{{ url_for('dashboard') }}">
+                            <a class="nav-link {% if request.endpoint == 'dashboard.dashboard' %}active{% endif %}" href="{{ url_for('dashboard.dashboard') }}">
                                 <i class="bi bi-house-door"></i> Overview
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'statistics' %}active{% endif %}" href="{{ url_for('statistics') }}">
+                            <a class="nav-link {% if request.endpoint == 'dashboard.statistics' %}active{% endif %}" href="{{ url_for('dashboard.statistics') }}">
                                 <i class="bi bi-bar-chart-line"></i> Statistics
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'zones_page' %}active{% endif %}" href="{{ url_for('zones_page') }}">
+                            <a class="nav-link {% if request.endpoint == 'dashboard.compare_zones' %}active{% endif %}" href="{{ url_for('dashboard.compare_zones') }}">
+                                <i class="bi bi-arrow-left-right"></i> Compare
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'dashboard.zones_page' %}active{% endif %}" href="{{ url_for('dashboard.zones_page') }}">
                                 <i class="bi bi-geo-alt"></i> Zones
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('simulate') }}">
+                            <a class="nav-link" href="{{ url_for('dashboard.simulate') }}">
                                 <i class="bi bi-arrow-repeat"></i> Simulate
                             </a>
                         </li>
@@ -60,17 +65,17 @@
                                 <i class="bi bi-person-circle"></i> {{ current_user.username }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="{{ url_for('logout') }}">
+                                <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                                     <i class="bi bi-box-arrow-right"></i> Logout
                                 </a></li>
                             </ul>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                            <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
                         </li>
                     {% endif %}
 
