--- a/templates/zone_details.html
+++ b/templates/zone_details.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="mb-4">
-    <a href="{{ url_for('dashboard') }}" class="btn btn-outline-primary">
+    <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-outline-primary">
         <i class="bi bi-arrow-left"></i> Back to Dashboard
     </a>
 </div>
